Fixed a bug with duplicate name labeling errors